[project]
name = "django-sample"
version = "0.1.0"
description = "Django sample project for aisum-infrakit (uv-managed)"
requires-python = ">=3.14"
dependencies = [
    "asgiref==3.4.1",
    "django==4.0.6",
    "pytz==2021.1",
    "sqlparse==0.4.2",
    # Python 3.13+ 에서 제거된 stdlib 'cgi' 모듈의 PyPI shim — Django 4.0.x 의 'import cgi' 호환용.
    "legacy-cgi>=2.6",
]

[tool.uv]
# 단일 애플리케이션 — 패키지로 빌드하지 않는다 (build-system 불필요)
package = false
