[project]
name = "fastapi-sample"
version = "0.1.0"
description = "FastAPI REST API sample with Scalar OpenAPI docs (uv-managed)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.0",
    "bcrypt>=4.1.0",
    "pyjwt>=2.8.0",
    "scalar-fastapi>=1.0.3",
    "python-multipart>=0.0.9",
]

[tool.uv]
package = false
