[project]
name = "flask-sample"
version = "0.1.0"
description = "Flask REST API sample with Scalar OpenAPI docs (uv-managed)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flask>=3.0.0",
    "flask-openapi3>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "pydantic[email]>=2.7.0",
    "bcrypt>=4.1.0",
    "pyjwt>=2.8.0",
]

[tool.uv]
package = false
